--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@ body {
   padding: 0;
   list-style: none;
   border-radius: 50%;
-  transform: rotate(calc(var(--rotate) * 360deg));
+  /* Provide ring rotation variable without transforming the container (to avoid stacking context) */
+  --ring-rotate: calc(var(--rotate) * 360deg);
 }
 
 .circle-text li {
@@ -72,26 +73,26 @@ body {
 }
 
 
-.circle-text li:nth-child(1) { rotate: 18deg; }
-.circle-text li:nth-child(2) { rotate: 36deg; }
-.circle-text li:nth-child(3) { rotate: 54deg; }
-.circle-text li:nth-child(4) { rotate: 72deg; }
-.circle-text li:nth-child(5) { rotate: 90deg; }
-.circle-text li:nth-child(6) { rotate: 108deg; }
-.circle-text li:nth-child(7) { rotate: 126deg; }
-.circle-text li:nth-child(8) { rotate: 144deg; }
-.circle-text li:nth-child(9) { rotate: 162deg; }
-.circle-text li:nth-child(10) { rotate: 180deg; }
-.circle-text li:nth-child(11) { rotate: 198deg; }
-.circle-text li:nth-child(12) { rotate: 216deg; }
-.circle-text li:nth-child(13) { rotate: 234deg; }
-.circle-text li:nth-child(14) { rotate: 252deg; }
-.circle-text li:nth-child(15) { rotate: 270deg; }
-.circle-text li:nth-child(16) { rotate: 288deg; }
-.circle-text li:nth-child(17) { rotate: 306deg; }
-.circle-text li:nth-child(18) { rotate: 324deg; }
-.circle-text li:nth-child(19) { rotate: 342deg; }
-.circle-text li:nth-child(20) { rotate: 360deg; }
+.circle-text li:nth-child(1) { rotate: calc(18deg + var(--ring-rotate)); }
+.circle-text li:nth-child(2) { rotate: calc(36deg + var(--ring-rotate)); }
+.circle-text li:nth-child(3) { rotate: calc(54deg + var(--ring-rotate)); }
+.circle-text li:nth-child(4) { rotate: calc(72deg + var(--ring-rotate)); }
+.circle-text li:nth-child(5) { rotate: calc(90deg + var(--ring-rotate)); }
+.circle-text li:nth-child(6) { rotate: calc(108deg + var(--ring-rotate)); }
+.circle-text li:nth-child(7) { rotate: calc(126deg + var(--ring-rotate)); }
+.circle-text li:nth-child(8) { rotate: calc(144deg + var(--ring-rotate)); }
+.circle-text li:nth-child(9) { rotate: calc(162deg + var(--ring-rotate)); }
+.circle-text li:nth-child(10) { rotate: calc(180deg + var(--ring-rotate)); }
+.circle-text li:nth-child(11) { rotate: calc(198deg + var(--ring-rotate)); }
+.circle-text li:nth-child(12) { rotate: calc(216deg + var(--ring-rotate)); }
+.circle-text li:nth-child(13) { rotate: calc(234deg + var(--ring-rotate)); }
+.circle-text li:nth-child(14) { rotate: calc(252deg + var(--ring-rotate)); }
+.circle-text li:nth-child(15) { rotate: calc(270deg + var(--ring-rotate)); }
+.circle-text li:nth-child(16) { rotate: calc(288deg + var(--ring-rotate)); }
+.circle-text li:nth-child(17) { rotate: calc(306deg + var(--ring-rotate)); }
+.circle-text li:nth-child(18) { rotate: calc(324deg + var(--ring-rotate)); }
+.circle-text li:nth-child(19) { rotate: calc(342deg + var(--ring-rotate)); }
+.circle-text li:nth-child(20) { rotate: calc(360deg + var(--ring-rotate)); }
 
 .circle-text li span {
   --rotate-velocity: calc(var(--rotate) - var(--delayed-rotate));
